--- a/style.css
+++ b/style.css
@@ -12,24 +12,14 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-size: 20px; 
     color: #f0f8ff; 
-    line-height: 1.5; 
-}
-
-
-.legends, .cars, .history
-{
+    line-height: 1.5;
     background-color: #2e3b57;
 }
 
 .main{
     background-image: url(img/wp2922360.jpg);
 }
-.cars_container
-{
-    background-image: url(img/bmw-m4-rainy-night-thumb.jpg);
-    width: 100%;
-    height: 200px;
-}
+
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 40px; 
@@ -48,16 +38,16 @@ h1 {
     border: 1px solid #ddd; 
 }
 
+.legends_table th {
+    background-color: #f2f2f2;
+    color: #333;
+}
+
 .history_h1
 {
     text-align: center;
     margin-top: 15px;
     margin-bottom: 15px;
-}
-
-.legends_table th {
-    background-color: #f2f2f2;
-    color: #333;
 }
 
 .legends_list {
@@ -148,4 +138,10 @@ dl {
     margin-left: 850px;
 }
 
+I + B {
+    color: #f7a2a2;
+}
 
+.mainH1 > p {
+    color: #97cffd;
+}
